--- a/templates/gistool/index_old.html
+++ b/templates/gistool/index_old.html
@@ -1,21 +1,261 @@
-<!DOCTYPE html>
+{# Load the tag library #}
+{% load bootstrap3 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+<script type="text/javascript" src="{{ STATIC_URL }} /static/js/jquery.js">
+</script>
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static "style.css" %} "/>
+<div id="query" class="well text-center">
+  <h1>Coastal Groundwater Vulnerability Assessment and Mapping (CGWVAM)</h1>
+{# Display a form #}
+<form id="uploadinput" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <div id="analysis" class="input-group">
+    <span class="input-group-addon">Mode of analysis &nbsp; <span class="glyphicon glyphicon-random"></span></span>
+    <div class="col-xs-12 nopad">
+      <select name="analysis" class="selectpicker form-control" data-live-search="true" title="Please select one Analysis mode" required>
+        <option value="drastic">DRASTIC-U</option>
+        <option value="galdit">GALDIT-U</option>
+      </select>
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Depth to water table (D)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="DW" class="form-control" placeholder="weightage" value="5" required>
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="DF" class="form-control" required>
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Net Recharge (R)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="RW" class="form-control" placeholder="weightage" value="4">
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="RF" class="form-control">
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Aquifer media (A)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="AW" class="form-control" placeholder="weightage" value="3">
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="AF" class="form-control">
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Soil media (S)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="SW" class="form-control" placeholder="weightage" value="2">
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="SF" class="form-control">
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Topography / Slope (T)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="TW" class="form-control" placeholder="weightage" value="1">
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="TF" class="form-control">
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Impact of vadose zone (I)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="IW" class="form-control" placeholder="weightage" value="1">
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="IF" class="form-control">
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Hydraulic Conductivity (C)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="CW" class="form-control" placeholder="weightage" value="3">
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="CF" class="form-control">
+    </div>
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Impact of urban area (U)</span>
+    <div class="col-xs-3 nopad">
+    <input type="text" name="UW" class="form-control" placeholder="weightage" value="1">
+    </div>
+    <div class="col-xs-9 nopad">
+    <input type="file" name="UF" class="form-control">
+    </div>
+  </div>
+</br>
+  {% buttons %}
+    <button type="submit" name="d" class="btn btn-lg btn-primary">
+      {% bootstrap_icon "ok" %} Calculate
+    </button>
+  {% endbuttons %}
+</form>
+</div>
+<div id="results" class="well text-center">
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>gistool</title>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCve4liJjacyI50x_HJyMPYaxoGL_e7s2U"></script>
+    <script>
+      maphit = 0;
+      var overlay;
+      USGSOverlay.prototype = new google.maps.OverlayView();
+
+      // Initialize the map and the custom overlay.
+
+      function initMap(png,minx,miny,maxx,maxy) {
+        maphit = maphit+1;
+        console.log(maphit);
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 1,
+          center: {lat: (miny+maxy)/2, lng: (minx+maxx)/2},
+          mapTypeId: 'satellite'
+        });
+
+        var bounds = new google.maps.LatLngBounds(
+            new google.maps.LatLng(miny, minx),
+            new google.maps.LatLng(maxy, maxx));
+
+        map.fitBounds(bounds);
+        // The photograph is courtesy of the U.S. Geological Survey.
+        if (png) {
+          var srcImage = window.location.origin+png;//png;
+          //console.log(srcImage);
+          // The custom USGSOverlay object contains the USGS image,
+          // the bounds of the image, and a reference to the map.
+          overlay = new USGSOverlay(bounds, srcImage, map);
+        }
+      }
+
+      /** @constructor */
+      function USGSOverlay(bounds, image, map) {
+
+        // Initialize all properties.
+        this.bounds_ = bounds;
+        this.image_ = image;
+        this.map_ = map;
+
+        // Define a property to hold the image's div. We'll
+        // actually create this div upon receipt of the onAdd()
+        // method so we'll leave it null for now.
+        this.div_ = null;
+
+        // Explicitly call setMap on this overlay.
+        this.setMap(map);
+      }
+
+      /**
+       * onAdd is called when the map's panes are ready and the overlay has been
+       * added to the map.
+       */
+      USGSOverlay.prototype.onAdd = function() {
+
+        var div = document.createElement('div');
+        div.style.borderStyle = 'none';
+        div.style.borderWidth = '0px';
+        div.style.position = 'absolute';
+
+        // Create the img element and attach it to the div.
+        var img = document.createElement('img');
+        img.src = this.image_;
+        img.style.width = '100%';
+        img.style.height = '100%';
+        img.style.position = 'absolute';
+        div.appendChild(img);
+
+        this.div_ = div;
+
+        // Add the element to the "overlayLayer" pane.
+        var panes = this.getPanes();
+        panes.overlayLayer.appendChild(div);
+      };
+
+      USGSOverlay.prototype.draw = function() {
+
+        // We use the south-west and north-east
+        // coordinates of the overlay to peg it to the correct position and size.
+        // To do this, we need to retrieve the projection from the overlay.
+        var overlayProjection = this.getProjection();
+
+        // Retrieve the south-west and north-east coordinates of this overlay
+        // in LatLngs and convert them to pixel coordinates.
+        // We'll use these coordinates to resize the div.
+        var sw = overlayProjection.fromLatLngToDivPixel(this.bounds_.getSouthWest());
+        var ne = overlayProjection.fromLatLngToDivPixel(this.bounds_.getNorthEast());
+
+        // Resize the image's div to fit the indicated dimensions.
+        var div = this.div_;
+        div.style.left = sw.x + 'px';
+        div.style.top = ne.y + 'px';
+        div.style.width = (ne.x - sw.x) + 'px';
+        div.style.height = (sw.y - ne.y) + 'px';
+      };
+
+      // The onRemove() method will be called automatically from the API if
+      // we ever set the overlay's map property to 'null'.
+      USGSOverlay.prototype.onRemove = function() {
+        this.div_.parentNode.removeChild(this.div_);
+        this.div_ = null;
+      };
+      function finitMap (){
+        if (maphit<0){
+          initMap('sdf','0','0','0','0');
+          $('html,body').animate({
+                  scrollTop: $("#query").offset().top},
+            'slow');
+        }
+        else{
+          $('html,body').animate({
+                  scrollTop: $("#results").offset().top},
+            'slow');
+        }
+        }
+      google.maps.event.addDomListener(window, 'load', finitMap);
+    </script>
   </head>
   <body>
-    <h1>Coastal Groundwater Vulnerability Assessment and Mapping (CGWVAM)</h1>
-    <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="myfile">
-    <input type="file" name="myfile">
-    <input type="file" name="myfile">
-    <button type="submit">Calculate</button>
-  </form>
-
-  {% if uploaded_file_url %}
-    <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-  {% endif %}
+    <div id="map"></div>
   </body>
 </html>
+<div id="downloads">
+  <h1><span>DOWNLOADS</span></h1>
+    {% if output_file_url %}
+      <a class="btn btn-success btn-lg" href="{{ output_file_url }}" target="_blank"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Output Single Band GeoTiff file</a>
+    {% endif %}
+    {% if rendered_file_url %}
+      <a class="btn btn-success btn-lg" href="{{ rendered_file_url }}" target="_blank"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Coloured RGB Band GeoTiff file</a>
+    {% endif %}
+    {% if png_file_url %}
+    <a class="btn btn-success btn-lg" href="{{ png_file_url }}" target="_blank"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Coloured PNG file</a>
+      <script>
+      javascript:initMap('{{ png_file_url }}',{{ minx }},{{ miny }},{{ maxx }},{{ maxy }});
+      </script>
+    {% endif %}
+</div>
+</div>
