--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,34 @@
+.navbar {
+  margin: 10px 0;
+}
+.navbar-default {
+background-color: #fff;
+border-color: #fff;
+}
+.brand-name {
+ font-family: 'Josefin Slab', serif;
+ font-size: 47px;
+ font-weight: bold;
+ color: #444;
+ text-decoration: none;
+}
+
+.nav-container {
+padding-top: 8px;
+}
+
+.navbar-custom {
+    font-size: 20px;
+    background-color: #FFF;
+}
+
 .nopad {
 	padding : 0px;
 }
 
+body {
+	background-color: 	#D3D3D3;
+}
 #uploadinput {
 	padding: 20px 50 0 50px;
 	margin: 0 auto;
