--- a/gistool/static/style.css
+++ b/gistool/static/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 #header {
-    background: url(http://maps.cerdi.com.au/images/VVG-map-header.jpg) no-repeat top center;
+    background: url(/static/water.jpg) no-repeat top center;
     height: 82px;
     position: relative;
     left: 0;
@@ -26,11 +26,36 @@ img.header-left{
 
 
 #map {
-		height: Calc(100vh - 100px);
+		height: Calc(100vh - 115px);
 }
 
 #panel{
 	padding: 10px;
+}
+
+#legend{
+	background: url(/static/legend.png) no-repeat;
+   background-size:100% auto;
+   height:160px;
+   margin:0 20px;
+}
+
+#footer {
+    background: url(/static/water.jpg) no-repeat bottom center;
+    max-height: 14px;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 5px;
+    bottom:0;
+    z-index: 0;
+}
+
+#copyright {
+  background-color: white;
+  top: 0px;
+  padding: 1 15px 0 15px;
+  max-height: 10px;
 }
 
 /*sidebar start*/
@@ -263,6 +288,17 @@ a, a:visited {
 	border-radius: 0px;
 }
 
+.info {
+    min-height: 15px;
+    padding: 5px;
+    margin: 10px 0 ;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  }
+
 #downloads{
   border:2px dotted grey;
 	margin:30px 10% 20px 10%;
@@ -288,8 +324,4 @@ a, a:visited {
 
 #results {
 	margin: 50px auto 10px auto;
-}
-
-#delete-button {
-  margin-top: 5px;
 }
