--- a/gistool/static/style.css
+++ b/gistool/static/style.css
@@ -14,6 +14,7 @@ html, body {
     top: 0;
     z-index: 0;
 }
+
 .header-left{
 	float: left;
 	padding-left: 0;
@@ -26,9 +27,12 @@ img.header-left{
 
 
 #map {
-		height: Calc(100vh - 115px);
+	height: Calc(100vh - 115px);
 }
 
+div[title="Add a marker"] {
+  display: none;
+}
 #panel{
 	padding: 10px;
 }
@@ -213,7 +217,8 @@ div.analysischeck{
 }
 label{
   padding: 5px;
-	font-size: 14px !important;
+	font-size: 11px !important;
+  max width: 200px;
 
 }
 
@@ -275,6 +280,24 @@ ul, menu, dir {
     -ms-border-radius: 2px;
     -o-border-radius: 2px;
     border-radius: 2px;
+}
+
+.fade-wrapper {
+    z-index: 100;
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.infooverlay {
+    position: relative;
+    margin: 20vh auto;
+    height: 60vh;
+    width: 50vw;
+    background: white;
+    overflow: auto;
 }
 
 a, a:visited {
