--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@ html, body {
     top: 0;
     z-index: 0;
 }
+
 .header-left{
 	float: left;
 	padding-left: 0;
@@ -26,19 +27,40 @@ img.header-left{
 
 
 #map {
-		height: Calc(100vh - 100px);
+	height: Calc(100vh - 115px);
 }
 
+div[title="Add a marker"] {
+  display: none;
+}
 #panel{
 	padding: 10px;
 }
 
 #legend{
-	background: url(/static/legend.png) 50% no-repeat;
+	background: url(/static/legend.png) no-repeat;
    background-size:100% auto;
-   height:250px;
+   height:160px;
+   margin:10px 20px;
 }
 
+#footer {
+    background: url(/static/water.jpg) no-repeat top center;
+    max-height: 14px;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 5px;
+    bottom:0;
+    z-index: 0;
+}
+
+#copyright {
+  background-color: white;
+  top: 0px;
+  padding: 1 15px 0 15px;
+  max-height: 10px;
+}
 
 /*sidebar start*/
 /*!
@@ -134,20 +156,37 @@ body {
 
 a#menu-toggle{
     position: absolute;
-    top: 80px;
+    top: 100px;
     left: .5em;
     z-index: 40;
     font-size: 1.5em !important;
     background: white;
     color: #2891cf;
+    border: 1px solid #2891cf;
+
+}
+
+a#side-toggle{
+    z-index: 40;
+    font-size: 1.5em !important;
+    background: white;
+    color: #2891cf;
+    border: 1px solid #2891cf;
+    margin-bottom: 10px;
+
 }
 
 div#layer-toggle{
     position: absolute;
-    top: 60px;
+    top: 40px;
     right: .5em;
     z-index: 40;
     background: white;
+    border: 1px solid #2891cf;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
 }
 /*sidebar end*/
 
@@ -178,7 +217,8 @@ div.analysischeck{
 }
 label{
   padding: 5px;
-	font-size: 14px !important;
+	font-size: 11px !important;
+  max width: 200px;
 
 }
 
@@ -242,6 +282,24 @@ ul, menu, dir {
     border-radius: 2px;
 }
 
+.fade-wrapper {
+    z-index: 100;
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.infooverlay {
+    position: relative;
+    margin: 20vh auto;
+    height: 60vh;
+    width: 50vw;
+    background: white;
+    overflow: auto;
+}
+
 a, a:visited {
     color: #0860AA;
     text-decoration: none;
@@ -258,17 +316,22 @@ a, a:visited {
 	padding : 0px;
 }
 
-
-
-
-
 /* Optional: Makes the sample page fill the window. */
-
-
 .well{
 	margin-bottom: 0!important;
 	border-radius: 0px;
 }
+
+.info {
+    min-height: 15px;
+    padding: 5px;
+    margin: 10px 0 ;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  }
 
 #downloads{
   border:2px dotted grey;
@@ -295,8 +358,4 @@ a, a:visited {
 
 #results {
 	margin: 50px auto 10px auto;
-}
-
-#delete-button {
-  margin-top: 5px;
 }
