--- a/templates/gistool/index.html
+++ b/templates/gistool/index.html
@@ -20,12 +20,26 @@
     <link href="{{ STATIC_URL }} /favicon.ico?v=2" rel="icon" type="image/x-icon">
   </head>
   <body>
+    <div id="helpdiv" class="fade-wrapper">
+      <div class="infooverlay well">
+        <h3>Help</h3>
+        <p>This is a tool to analyze groundwater vulnerabilities and you can analyze, view, share, download and take screenshots of the resultant analysis.</p>
+      </div>
+    </div>
+    <div id="disclaimerdiv" class="fade-wrapper">
+      <div class="infooverlay well">
+        <h3>Website disclaimer</h3>
+        <p>The information contained in this website is for general information purposes only. The information is provided by NCESS and while we endeavour to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.</p>
+        <p>In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this website.</p>
+      </div>
+    </div>
     <div id="header">
       <div class="col-md-4 header-left ">
         <a href="/"><img class="header-left" src="{% static "Header-left.png" %}"  alt="NCESS LOGO"></a>
       </div>
   	   <ul id="buttons">
-          <li><a class="help" href="#help">Help</a></li>
+          <li><a id="help" class="overlaybutton" href="#">Help</a></li>
+          <li><a id="disclaimer" class="overlaybutton" href="#">Disclaimer</a></li>
       </ul>
 	  </div>
     <div id="wrapper">
@@ -121,7 +135,7 @@
             <div class="input-group">
               <span class="input-group-addon">Groundwater occurrence (Aquifer type)</span>
               <div class="col-md-3 nopad">
-              <input type="text" name="GW" class="form-control galdit" placeholder="weightage" value="5">
+              <input type="text" name="GW" class="form-control galdit" placeholder="weightage" value="1">
               </div>
               <div class="col-md-9 nopad">
               <input type="file" name="GF" class="form-control galdit">
@@ -130,7 +144,7 @@
           <div class="input-group">
             <span class="input-group-addon">Hydraulic Conductivity (GDP/m3)</span>
             <div class="col-md-3 nopad">
-            <input type="text" name="HW" class="form-control galdit" placeholder="weightage" value="5">
+            <input type="text" name="HW" class="form-control galdit" placeholder="weightage" value="3">
             </div>
             <div class="col-md-9 nopad">
             <input type="file" name="HF" class="form-control galdit">
@@ -139,7 +153,7 @@
           <div class="input-group">
             <span class="input-group-addon">Groundwater Table above MSL (m)</span>
             <div class="col-md-3 nopad">
-            <input type="text" name="GTW" class="form-control galdit" placeholder="weightage" value="5">
+            <input type="text" name="GTW" class="form-control galdit" placeholder="weightage" value="4">
             </div>
             <div class="col-md-9 nopad">
             <input type="file" name="GTF" class="form-control galdit">
@@ -151,13 +165,13 @@
             <input type="text" name="DW" class="form-control galdit" placeholder="weightage" value="5">
             </div>
             <div class="col-md-9 nopad">
-            <input type="file" name="DF" class="form-control galdit">
+            <input type="file" name="DW" class="form-control galdit">
             </div>
           </div>
           <div class="input-group">
             <span class="input-group-addon">Impact of existing Seawater intrusion zone (Cl-/HCO3 ratio)</span>
             <div class="col-md-3 nopad">
-            <input type="text" name="IW" class="form-control galdit" placeholder="weightage" value="5">
+            <input type="text" name="IW" class="form-control galdit" placeholder="weightage" value="3">
             </div>
             <div class="col-md-9 nopad">
             <input type="file" name="IF" class="form-control galdit">
@@ -166,7 +180,7 @@
           <div class="input-group">
             <span class="input-group-addon">Thickness of Saturated layer (m) in vertical scale</span>
             <div class="col-md-3 nopad">
-            <input type="text" name="TW" class="form-control galdit" placeholder="weightage" value="5">
+            <input type="text" name="TW" class="form-control galdit" placeholder="weightage" value="2">
             </div>
             <div class="col-md-9 nopad">
             <input type="file" name="TF" class="form-control galdit">
@@ -175,7 +189,7 @@
           <div class="input-group">
             <span class="input-group-addon">Impact of Urban area on seawater intrusion</span>
             <div class="col-md-3 nopad">
-            <input type="text" name="UW" class="form-control galdit" placeholder="weightage" value="5">
+            <input type="text" name="UW" class="form-control galdit" placeholder="weightage" value="2">
             </div>
             <div class="col-md-9 nopad">
             <input type="file" name="UF" class="form-control galdit">
@@ -193,13 +207,25 @@
           <div id="downloads" class="text-center">
             <h1><span>DOWNLOADS</span></h1>
               {% if outputdr_file_url %}
-                <a class="btn" href="{{ outputdr_file_url }}" download><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Single Band file (GeoTiff)</a>
+              <h3>Groundwater Contamination Vulnerable Zone</h3>
+                <a class="btn" href="{{ outputdr_file_url }}" download="Groundwater_Contamination_Vulnerable_Zone_Single_Band.tiff"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Single Band file (GeoTiff)</a>
               {% endif %}
               {% if rendereddr_file_url %}
-                <a class="btn" href="{{ rendereddr_file_url }}" download><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Coloured RGB file (GeoTiff)</a>
+                <a class="btn" href="{{ rendereddr_file_url }}" download="Groundwater_Contamination_Vulnerable_Zone_RGB_Symbology.tiff"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Coloured RGB file (GeoTiff)</a>
               {% endif %}
               {% if pngdr_file_url %}
-              <a class="btn" href="{{ pngdr_file_url }}" download><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Map Overlay file (PNG)</a>
+              <a class="btn" href="{{ pngdr_file_url }}" download="Groundwater_Contamination_Vulnerable_Zone_Overlay.png"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Map Overlay file (PNG)</a>
+              {% endif %}
+
+              {% if outputga_file_url %}
+              <h3>Seawater Intrusion Vulnerable Zone</h3>
+                <a class="btn" href="{{ outputga_file_url }}" download="Seawater_Intrusion_Vulnerable_Zone_Single_Band.tiff"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Single Band file (GeoTiff)</a>
+              {% endif %}
+              {% if renderedga_file_url %}
+                <a class="btn" href="{{ renderedga_file_url }}" download="Seawater_Intrusion_Vulnerable_Zone_RGB_Symbology.tiff"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Coloured RGB file (GeoTiff)</a>
+              {% endif %}
+              {% if pngga_file_url %}
+              <a class="btn" href="{{ pngga_file_url }}" download="Seawater_Intrusion_Vulnerable_Zone_Overlay.png"><span class="glyphicon glyphicon-download-alt"></span>&nbsp;Map Overlay file (PNG)</a>
               {% endif %}
           </div>
         </div>
@@ -220,9 +246,9 @@
               <div id="sharelist" class="text-center"></div>
               <div id="legend"></div>
               <h5 class="text-center">Layer Menu</h5>
-              <label><input id="galditcheck" class="overlaycheck" type="checkbox" value="" checked>&nbsp;GALDIT-U</label></br>
+              <label><input id="galditcheck" class="overlaycheck" type="checkbox" value="" checked>&nbsp;Seawater Intrusion Vulnerability</label></br>
               <input id="galditopacity" class="opacity" type="range"  min="0" max="1" value="1" step="0.1"/>
-              <label><input id="drasticcheck" class="overlaycheck" type="checkbox" value="" checked>&nbsp;DRASTIC-U</label>
+              <label><input id="drasticcheck" class="overlaycheck" type="checkbox" value="" checked>&nbsp;Groundwater Contamination Vulnerability</label>
               <input id="drasticopacity" class="opacity" type="range"  min="0" max="1" value="1" step="0.1"/>
               <div>
                 <h5 class="text-center">Drawing Tools</h5>
@@ -272,7 +298,7 @@
 
       function calcar() {
           var area = google.maps.geometry.spherical.computeArea(selectedShape.getPath());
-          document.getElementById("area").innerHTML = "Area =" + area;
+          document.getElementById("area").innerHTML = "Area = " + (area/1000000).toFixed(4) + " Sq.Km" ;
       }
 
       function deleteSelectedShape() {
@@ -283,8 +309,11 @@
 
       // Initialize the map and the custom overlay.
       function initMap() {
-        maphit = maphit+1;
+          maphit = maphit+1;
           map = new google.maps.Map(document.getElementById('map'), {
+          scaleControl: true,
+          rotateControl: true,
+          mapTypeControl: true,
           center: {lat:  22.414024, lng: 80.461715},
           zoom: 5,
           mapTypeId: 'roadmap',
@@ -320,6 +349,28 @@
                                 'Error: Your browser doesn\'t support geolocation.');
           infoWindow.open(map);
         };
+
+        var geocoder = new google.maps.Geocoder();
+        var infowindow = new google.maps.InfoWindow();
+        google.maps.event.addListener(map, 'click', function(event) {
+          try {
+            infowindow.close();
+          }
+          catch (e){
+
+          }
+          geocoder.geocode({
+            'latLng': event.latLng
+          }, function(results, status) {
+            if (status == google.maps.GeocoderStatus.OK) {
+              if (results[0]) {
+                infowindow.setPosition(event.latLng);
+                infowindow.setContent(results[0].formatted_address);
+                infowindow.open(map);
+              }
+            }
+          });
+        });
 
         var polyOptions = {
           strokeWeight: 0,
@@ -567,7 +618,7 @@
       }
 
       //console.log($("#selectanalysis option:selected").val());
-      $(function() {
+      $(function () {
         $('input[class="analysischeck"]').change(function(){
         //console.log($(this).val());
         if ($('input#drasticanalysis').is(":checked")) {
@@ -587,7 +638,7 @@
           $('#galditdiv').hide();
         }
       });
-      });
+    });
 
       $(function(){
         $('input[class="opacity"]').change(function(){
@@ -676,8 +727,20 @@
         $("#shareanalysis").html(tohtml);
       }
 
+      $(function(){
+        var html;
+        $('a.overlaybutton').click(function(){
+          var id = $(this).attr('id');
+          $("#"+id+'div').fadeIn();
+          console.log("#"+id+'div');
+        });
+        $('.fade-wrapper').click(function(){
+          $(this).fadeOut();
+        });
+      })
+
       $(window).on('load', function(){
-      console.log(maphit);
+          console.log(maphit);
         if (galdit && maphit<2 ) {
           try {
             //console.log("loafing")
